# clibs

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: README.md
cmake/c/: CMakeLists.txt  build_clapack.cmake  build_gsl.cmake  build_lbfgs.cmake  build_lets_be_rational.cmake  build_levmar.cmake  build_openssl.cmake  build_zlib.cmake  report.cmake
cmake/c/lbfgs/: CMakeLists.txt
cmake/c/lbfgs/src/: Makefile  ap.cpp  ap.hpp  lbfgsb.cpp  lbfgsb.hpp  lbfgsb_common.cpp  lbfgsb_common.hpp  lbfgsb_wrapper.cpp
cmake/c/lbfgs/src/include/: lbfgsb.h
cmake/c/lbfgs/src/test/: main.c  test_root_finding.c  test_svi.c
cmake/c/lets_be_rational/: CMakeLists.txt
cmake/c/openssl/: apps.cmake  crypto.cmake  openssl.cmake  ssl.cmake
cmake/cpp/: CMakeLists.txt  build_restc-cpp.cmake
cmake/modules/: FindBISON.cmake  FindCBLAS.cmake  FindCEREAL.cmake  FindCLAPACK.cmake  FindF2C.cmake  FindJSONCPP.cmake  FindLA.cmake  FindLBFGS.cmake  FindLBFGSB.cmake  FindLEVMAR.cmake  FindLetsBeRational.cmake  FindOpenSSL.cmake
